# cpp_project_base

./: CMakeLists.txt  CMakeLists.txt.in  README.md
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
